# voidray

./: Cargo.toml  README.md
assets/: material_testing_main.mtl  mossy_ground.mtl  wood_albedo.tif  wood_height.tif  wood_normal.tif
hatchery/: Cargo.toml
hatchery/src/: engine.rs  lib.rs  render_pass.rs
hatchery/src/gui/: imgui_implementation.rs  mod.rs
voidray/: Cargo.toml
voidray-core/: Cargo.toml  design.md
voidray-core/src/core/: mod.rs
voidray-core/src/core/radiometry/: mod.rs  rgb.rs  sampled.rs
voidray-math/: Cargo.toml
voidray-math/src/: common.rs  lib.rs  vector.rs
voidray/src/: gui.rs  main.rs  pipeline.rs  render.rs  test_pipeline.rs  viewport_pipeline.rs  widgets.rs
voidray/src/common/: environments.rs  materials.rs  mod.rs  objects.rs
voidray/src/core/: bvh.rs  camera.rs  environment.rs  material.rs  mesh.rs  mod.rs  object.rs  ray.rs  render.rs  scene.rs  tracer.rs
voidray/src/graphics/: mesh.rs  mod.rs
voidray/src/shaders/: basic_vertex.glsl  checkerboard.glsl  tonemapping.glsl  viewport_fragment.glsl  viewport_vertex.glsl
voidray/src/utils/: aabb.rs  color.rs  math.rs  mod.rs  ray.rs
voidray_app/: Cargo.toml
voidray_app/src/: gui.rs  main.rs  utils.rs  widgets.rs
voidray_app/src/examples/: cornell.rs  material.rs  mod.rs  mushroom.rs  spheres.rs
voidray_common/: Cargo.toml
voidray_common/src/: environments.rs  lib.rs  microfacet.rs  sampling.rs  sdf.rs  simple.rs  simple_bsdf.rs  surfaces.rs
voidray_launcher/: Cargo.toml
voidray_launcher/src/: lib.rs
voidray_renderer/: Cargo.toml
voidray_renderer/src/: lib.rs
voidray_renderer/src/core/: bvh.rs  camera.rs  mesh.rs  mod.rs  scene.rs  settings.rs  texture.rs  tracer.rs  traits.rs
voidray_renderer/src/graphics/: quad.rs
voidray_renderer/src/render/: iterative.rs  mod.rs  post_process.rs  renderer.rs  target.rs  viewport.rs
voidray_renderer/src/shaders/: post_process.glsl  tonemapping.glsl  utils.glsl  view_frag.glsl  view_vert.glsl
voidray_renderer/src/util/: aabb.rs  color.rs  math.rs  mod.rs  ray.rs  vector.rs
