[package]
name = "voidray_app"
description = "The main Voidray windowed application."
version = "0.1.0"
edition = "2021"
authors = ["Lev Kruglyak <lev.kruglyak2014@gmail.com>"]

[dependencies]

# Log
simplelog = "0.12"
log = "0.4"

voidray_launcher = { path = "../voidray_launcher", features = ["egui"] }
voidray_renderer = { path = "../voidray_renderer", features = [] }
voidray_common = { path = "../voidray_common", features = [] }
