[package]
name = "voidray_common"
description = "Common implementations of materials, shapes, etc for the Voidray engine."
version = "0.1.0"
edition = "2021"
authors = ["Lev Kruglyak <lev.kruglyak2014@gmail.com>"]

[dependencies]
image = "0.24"

voidray_renderer = { path = "../voidray_renderer", features = [] }
