[package]
name = "voidray_renderer"
description = "The core of the Voidray rendering engine. Can be run independently from any windowed application."
version = "0.1.0"
edition = "2021"
# license-file = "LICENSE.md"
authors = ["Lev Kruglyak <lev.kruglyak2014@gmail.com>"]

[dependencies]
# Vulkano dependencies
vulkano = "0.30"
vulkano-util = "0.30"
vulkano-shaders = "0.30"

# Utils
lazy_static = "1.4"
rand = "0.8"
rand_distr = "0.4.3"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
derive-new = "0.5"

# Concurrency
crossbeam = "0.8"
rayon = "1.5"

# Math
cgmath = "0.18.0"

# IO
image = "0.24"
obj-rs = "0.7"

[features]
high_precision = []
# default = ["high_precision"]
